# LibraryManagement

./: CMakeLists.txt  README.md  main.cpp
data/: books.txt  borrows.txt  readers.txt
gui/: BookTab.cpp  BookTab.h  BorrowTab.cpp  BorrowTab.h  MainWindow.cpp  MainWindow.h  ReaderTab.cpp  ReaderTab.h  StatisticsTab.cpp  StatisticsTab.h
models/: Book.cpp  Book.h  BorrowRecord.cpp  BorrowRecord.h  Reader.cpp  Reader.h
services/: LibraryManager.cpp  LibraryManager.h
utils/: FileHandler.cpp  FileHandler.h  Validator.cpp  Validator.h
